--- a/_includes/layout.njk
+++ b/_includes/layout.njk
@@ -38,7 +38,7 @@
 
     <footer id="main-footer">
         <div class="container">
-            <p>&copy; 2024 Lipunx.com Reboot Project. All rights reserved.</p>
+            <p>&copy; 2024 lipunx.com Reboot Project. All rights reserved.</p>
         </div>
     </footer>
 
